<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="0dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="30dp"
        android:text="@string/receipt_heading"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/receipt_number_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/receipt_num_heading"/>
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/receipt_number_label"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="1201290129"/>
        <TextView
            android:id="@+id/date_value"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="12/12/12"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/date_heading"
            android:textStyle="bold"
            android:layout_toLeftOf="@id/date_value"/>
    </RelativeLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/divider"/>
    <!--User input values-->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/farmer_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/farmer_heading"/>
        <TextView
            android:id="@+id/farmer_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/farmer_label"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="farmer_name"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="25dp">
        <TextView
            android:id="@+id/moisture_level_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/moisture_heading"/>
        <TextView
            android:id="@+id/moisture_value"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/moisture_level_label"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="level"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="25dp">
        <TextView
            android:id="@+id/foreign_matter_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/foreign_heading"/>
        <TextView
            android:id="@+id/foreign_matter_value"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/foreign_matter_label"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="level"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="25dp">
        <TextView
            android:id="@+id/damaged_grain_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/damaged_heading"/>
        <TextView
            android:id="@+id/damaged_grain_value"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/damaged_grain_label"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="level"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="25dp">
        <TextView
            android:id="@+id/insects_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/insects_heading"/>
        <TextView
            android:id="@+id/insects_value"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/insects_label"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="level"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="25dp">
        <TextView
            android:id="@+id/odour_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/odour_heading"/>
        <TextView
            android:id="@+id/odour_value"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/odour_label"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="level"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="25dp">
        <TextView
            android:id="@+id/soiled_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/soiled_heading"/>
        <TextView
            android:id="@+id/soiled_value"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/soiled_label"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="level"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="25dp">
        <TextView
            android:id="@+id/variety_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/variety_heading"/>
        <TextView
            android:id="@+id/variety_value"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/variety_label"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="level"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="25dp">
        <TextView
            android:id="@+id/weight_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/weight_heading"/>
        <TextView
            android:id="@+id/weight_value"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/weight_label"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="level"/>
    </RelativeLayout>
    <!--Totals-->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/divider"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp">
        <TextView
            android:id="@+id/sub_total_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sub_total_heading"/>
        <TextView
            android:id="@+id/sub_total_value"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:textStyle="bold"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="level"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/sub_total_value"
            android:text="@string/currency"/>
    </RelativeLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/divider"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp">
        <TextView
            android:id="@+id/total_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/total_heading"/>
        <TextView
            android:id="@+id/total_value"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:textStyle="bold"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="2000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/total_value"
            android:text="@string/currency"/>
    </RelativeLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/divider"/>
    <!--Terms and conditions-->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:paddingTop="10dp"
        android:textSize="13dp"
        android:text="@string/terms"/>
</LinearLayout>
</ScrollView>