<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:orientation="vertical">

    <!-- One -->
    <TextView
        android:id="@+id/tv_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/collection_info"/>
    <LinearLayout
	    android:layout_width="fill_parent"
    	android:layout_height="80dp"
    	android:orientation="horizontal"
    	android:padding="10dp"
        android:background="#FFd5d5d5"
    >
    <!-- balance layout  -->
    <LinearLayout
        android:id="@+id/ll_farmer_name"
    	android:layout_width="match_parent"
    	android:layout_height="70dp"
    	android:orientation="horizontal"
    	android:background="#FFFFFFFF"
        android:layout_gravity="center_vertical"
        android:padding="0dp"
    >
    <TextView 
        android:id="@+id/tv_farmer_name"
    	android:layout_width="wrap_content"
    	android:layout_height="match_parent"
        android:layout_weight="1"
    	android:textSize="20sp"
    	android:textColor="#FF2f2f2f"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textAlignment="gravity"
        android:text="Farmer"
        android:background="#FFefefef"
    />
    <Spinner
            android:id="@+id/spinner_farmer"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    </LinearLayout>
    
    <!--Date -->
    <LinearLayout
	    android:layout_width="fill_parent"
    	android:layout_height="80dp"
    	android:orientation="horizontal"
    	android:padding="10dp"
        android:background="#FFd5d5d5"
    >
    <!-- balance layout  -->
    <LinearLayout
        android:id="@+id/ll_date"
    	android:layout_width="match_parent"
    	android:layout_height="70dp"
    	android:orientation="horizontal"
    	android:background="#FFFFFFFF"
        android:layout_gravity="center_vertical"
        android:padding="0dp"
    >
    <TextView 
        android:id="@+id/tv_date"
    	android:layout_width="wrap_content"
    	android:layout_height="match_parent"
        android:layout_weight="1"
    	android:textSize="20sp"
    	android:textColor="#FF2f2f2f"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textAlignment="gravity"
        android:text="Date"
        android:background="#FFefefef"
    />
    <EditText
            android:id="@+id/et_set_date"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:hint="@string/date_hint"/>
    </LinearLayout>

    </LinearLayout>
    
    <!-- Two -->
    <TextView
        android:id="@+id/tv_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/quality_standard" />
    <LinearLayout
	    android:layout_width="fill_parent"
    	android:layout_height="80dp"
    	android:orientation="horizontal"
    	android:padding="10dp"
    	android:background="#FFd5d5d5"
    >
    <!-- balance layout  -->
    <LinearLayout
        android:id="@+id/ll_moisture_level"
    	android:layout_width="match_parent"
    	android:layout_height="70dp"
    	android:orientation="horizontal"
    	android:background="#FFFFFFFF"
        android:layout_gravity="center_vertical"
        android:padding="0dp"
    >
    <TextView 
        android:id="@+id/tv_moisture_level"
    	android:layout_width="wrap_content"
    	android:layout_height="match_parent"
        android:layout_weight="1"
    	android:textSize="20sp"
    	android:textColor="#FF2f2f2f"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textAlignment="gravity"
        android:text="Moisture Level"
        android:background="#FFefefef"
    />
    <Switch
            android:id="@+id/switch_moisture_level"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textOn="Pass"
            android:textOff="Fail"/>
    </LinearLayout>

    </LinearLayout>
    <LinearLayout
	    android:layout_width="fill_parent"
    	android:layout_height="80dp"
    	android:orientation="horizontal"
    	android:padding="10dp"
    	android:background="#FFd5d5d5"
    >
    <!-- balance layout  -->
    <LinearLayout
        android:id="@+id/ll_foreign_matter"
    	android:layout_width="match_parent"
    	android:layout_height="70dp"
    	android:orientation="horizontal"
    	android:background="#FFFFFFFF"
        android:layout_gravity="center_vertical"
        android:padding="0dp"
    >
    <TextView 
        android:id="@+id/foreign_matter"
    	android:layout_width="wrap_content"
    	android:layout_height="match_parent"
        android:layout_weight="1"
    	android:textSize="20sp"
    	android:textColor="#FF2f2f2f"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textAlignment="gravity"
        android:text="Foreign Matter"
        android:background="#FFefefef"
    />
    <Switch
            android:id="@+id/switch_foreign_matters"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textOn="Pass"
            android:textOff="Fail"/>
    </LinearLayout>

    </LinearLayout>
    <LinearLayout
	    android:layout_width="fill_parent"
    	android:layout_height="80dp"
    	android:orientation="horizontal"
    	android:padding="10dp"
    	android:background="#FFd5d5d5"
    >
    <!-- balance layout  -->
    <LinearLayout
        android:id="@+id/ll_damaged_grain"
    	android:layout_width="match_parent"
    	android:layout_height="70dp"
    	android:orientation="horizontal"
    	android:background="#FFFFFFFF"
        android:layout_gravity="center_vertical"
        android:padding="0dp"
    >
    <TextView 
        android:id="@+id/damaged_grain"
    	android:layout_width="wrap_content"
    	android:layout_height="match_parent"
        android:layout_weight="1"
    	android:textSize="20sp"
    	android:textColor="#FF2f2f2f"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textAlignment="gravity"
        android:text="Damaged Grain"
        android:background="#FFefefef"
    />
    <Switch
            android:id="@+id/switch_damaged_grain"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textOn="Pass"
            android:textOff="Fail"/>
    </LinearLayout>

    </LinearLayout>
    <LinearLayout
	    android:layout_width="fill_parent"
    	android:layout_height="80dp"
    	android:orientation="horizontal"
    	android:padding="10dp"
    	android:background="#FFd5d5d5"
    >
    <!-- balance layout  -->
    <LinearLayout
        android:id="@+id/ll_insects"
    	android:layout_width="match_parent"
    	android:layout_height="70dp"
    	android:orientation="horizontal"
    	android:background="#FFFFFFFF"
        android:layout_gravity="center_vertical"
        android:padding="0dp"
    >
    <TextView 
        android:id="@+id/insects"
    	android:layout_width="wrap_content"
    	android:layout_height="match_parent"
        android:layout_weight="1"
    	android:textSize="20sp"
    	android:textColor="#FF2f2f2f"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textAlignment="gravity"
        android:text="Insects"
        android:background="#FFefefef"
    />
    <Switch
            android:id="@+id/switch_insects"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textOn="Pass"
            android:textOff="Fail"/>
    </LinearLayout>

    </LinearLayout>

    <!--Odour/Taste-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="#FFd5d5d5"
        >
        <!-- balance layout  -->
        <LinearLayout
            android:id="@+id/ll_odour_taste"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:background="#FFFFFFFF"
            android:layout_gravity="center_vertical"
            android:padding="0dp"
            >
            <TextView
                android:id="@+id/tv_odour_taste"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="#FF2f2f2f"
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textAlignment="gravity"
                android:text="@string/odour"
                android:background="#FFefefef"
                />
            <Switch
                android:id="@+id/switch_odour_taste"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textOn="Pass"
                android:textOff="Fail"/>
        </LinearLayout>

    </LinearLayout>
    <!-- Soiled Grain-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="#FFd5d5d5"
        >
        <!-- balance layout  -->
        <LinearLayout
            android:id="@+id/ll_soiled_grain"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:background="#FFFFFFFF"
            android:layout_gravity="center_vertical"
            android:padding="0dp"
            >
            <TextView
                android:id="@+id/tv_soiled_grain"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="#FF2f2f2f"
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textAlignment="gravity"
                android:text="@string/soiled"
                android:background="#FFefefef"
                />
            <Switch
                android:id="@+id/switch_soiled_grain"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textOn="Pass"
                android:textOff="Fail"/>
        </LinearLayout>

    </LinearLayout>
    <!-- Variety Mix-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="#FFd5d5d5"
        >
        <!-- balance layout  -->
        <LinearLayout
            android:id="@+id/ll_variety_mix"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:background="#FFFFFFFF"
            android:layout_gravity="center_vertical"
            android:padding="0dp"
            >
            <TextView
                android:id="@+id/tv_variety_mix"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="#FF2f2f2f"
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textAlignment="gravity"
                android:text="@string/variety"
                android:background="#FFefefef"
                />
            <Switch
                android:id="@+id/switch_variety_mix"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textOn="Pass"
                android:textOff="Fail"/>
        </LinearLayout>

    </LinearLayout>
    <!-- Three -->
    <TextView
        android:id="@+id/tv_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/weight"/>
    <LinearLayout
	    android:layout_width="fill_parent"
    	android:layout_height="80dp"
    	android:orientation="horizontal"
    	android:padding="10dp"
    	android:background="#FFd5d5d5"
    >
    <!-- balance layout  -->
    <LinearLayout
        android:id="@+id/ll_trans_hist_balance"
    	android:layout_width="match_parent"
    	android:layout_height="70dp"
    	android:orientation="horizontal"
    	android:background="#FFFFFFFF"
        android:layout_gravity="center_vertical"
        android:padding="0dp"
    >
    <TextView 
        android:id="@+id/tv_weight"
    	android:layout_width="wrap_content"
    	android:layout_height="match_parent"
        android:layout_weight="1"
    	android:textSize="20sp"
    	android:textColor="#FF2f2f2f"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textAlignment="gravity"
        android:text="@string/weight_logo"
        android:background="#FFefefef"
    />
    <EditText
            android:id="@+id/et_weight"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:inputType="number"
            android:editable="true"
            android:hint="@string/weight_hint" />
    </LinearLayout>

    </LinearLayout>
    <Button 
        android:id="@+id/button_print_receipt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:background="#ff85ff6a"
        android:hint="Submit"/> 
        

</LinearLayout>
</ScrollView>